; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_branch.c_unset_upstream.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_branch.c_unset_upstream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"branch.%s.remote\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"branch.%s.merge\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @unset_upstream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unset_upstream(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %7, i32* %6, align 4
  %8 = load i8*, i8** %5, align 8
  %9 = call i64 @git_buf_printf(i32* %6, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* %8)
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %34

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @git_buf_cstr(i32* %6)
  %15 = call i64 @git_config_delete_entry(i32* %13, i32 %14)
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  br label %32

18:                                               ; preds = %12
  %19 = call i32 @git_buf_clear(i32* %6)
  %20 = load i8*, i8** %5, align 8
  %21 = call i64 @git_buf_printf(i32* %6, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8* %20)
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %18
  br label %32

24:                                               ; preds = %18
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @git_buf_cstr(i32* %6)
  %27 = call i64 @git_config_delete_entry(i32* %25, i32 %26)
  %28 = icmp slt i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %24
  br label %32

30:                                               ; preds = %24
  %31 = call i32 @git_buf_dispose(i32* %6)
  store i32 0, i32* %3, align 4
  br label %34

32:                                               ; preds = %29, %23, %17
  %33 = call i32 @git_buf_dispose(i32* %6)
  store i32 -1, i32* %3, align 4
  br label %34

34:                                               ; preds = %32, %30, %11
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i64 @git_buf_printf(i32*, i8*, i8*) #1

declare dso_local i64 @git_config_delete_entry(i32*, i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @git_buf_clear(i32*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
